[package]
name = "Atom_Simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
wgpu = "0.19"
pollster = "0.3"
env_logger = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
geo = "0.28.0"
nalgebra-glm = "0.18.0"
rand = "0.8.5"
statrs = "0.16.0"
lazy_static = "1.4.0"
